--- a/ExpenseKata.Domain/ExpenseKata.Domain.csproj
+++ b/ExpenseKata.Domain/ExpenseKata.Domain.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Expenses\Constants\" />
+    <Folder Include="Users\" />
   </ItemGroup>
 
 </Project>
