--- a/ExpenseKata.Infrastructure/ExpenseKata.Infrastructure.csproj
+++ b/ExpenseKata.Infrastructure/ExpenseKata.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseKata.Domain\ExpenseKata.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
