--- a/ExpenseKata.Api/appsettings.json
+++ b/ExpenseKata.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ExpenseDatabase;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ExpenseDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
