--- a/ExpenseKata.Api/ExpenseKata.Api.csproj
+++ b/ExpenseKata.Api/ExpenseKata.Api.csproj
@@ -5,10 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ExpenseKata.Application\ExpenseKata.Application.csproj" />
     <ProjectReference Include="..\ExpenseKata.Infrastructure\ExpenseKata.Infrastructure.csproj" />
   </ItemGroup>
 
