--- a/ExpenseKata.Application/ExpenseKata.Application.csproj
+++ b/ExpenseKata.Application/ExpenseKata.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseKata.Infrastructure\ExpenseKata.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
