--- a/ExpenseKata.Application/ExpenseKata.Application.csproj
+++ b/ExpenseKata.Application/ExpenseKata.Application.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\ExpenseKata.Infrastructure\ExpenseKata.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Expenses\Query\" />
+  </ItemGroup>
+
 </Project>
